# terminal_type

./: dune-project  run.sh  terminal_type.opam  test.txt
_build/: log
lib/: check_input.ml  check_input.mli  display.ml  dune  typing_test.ml  typing_test.mli
test/: dune  test_check_input.ml  test_display.ml  test_typing_test.ml
