(lang dune 3.16)

(name terminal_type)

(generate_opam_files true)

(source
 (github e-mar404/terminal_type))

(authors "Emilio Marin")

(maintainers "Emilio Marin, but prob wont maintain")

(license LICENSE)

(package
 (name terminal_type)
 (synopsis "typing test on the terminal")
 (depends ocaml dune)
